# SWAT-anon

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
benchmarks/: benchmark_generation.py
benchmarks/ops/: benchmark.py  benchmark_delta_rule.py  benchmark_simple_gla_vs_mamba2.py  benchmark_titans.py  benchmark_ttt.py
fla/layers/: __init__.py  abc.py  attn.py  based.py  bitattn.py  comba.py  delta_net.py  forgetting_attn.py  gated_deltanet.py  gated_deltaproduct.py  gla.py  gsa.py  hgrn.py  hgrn2.py  lightnet.py  linear_attn.py  log_linear_mamba2.py  mamba.py  mamba2.py  mesa_net.py  mla.py  mom.py  multiscale_retention.py  nsa.py  path_attn.py  rebased.py  rodimus.py  rwkv6.py  rwkv7.py  simple_gla.py  swattn.py  utils.py
fla/models/: utils.py
fla/models/abc/: modeling_abc.py
fla/models/bitnet/: modeling_bitnet.py
fla/models/comba/: modeling_comba.py
fla/models/delta_net/: modeling_delta_net.py
fla/models/forgetting_transformer/: modeling_forgetting_transformer.py
fla/models/gated_deltanet/: modeling_gated_deltanet.py
fla/models/gated_deltaproduct/: modeling_gated_deltaproduct.py
fla/models/gla/: modeling_gla.py
fla/models/gsa/: modeling_gsa.py
fla/models/hgrn/: modeling_hgrn.py
fla/models/hgrn2/: modeling_hgrn2.py
fla/modules/: activations.py  convolution.py  feature_map.py  fused_bitlinear.py  fused_cross_entropy.py  fused_kl_div.py  fused_linear_cross_entropy.py  fused_norm_gate.py  grpo.py  l2norm.py  layernorm.py  layernorm_gated.py  mlp.py  parallel.py  rotary.py
fla/ops/abc/: chunk.py
tests/ops/: test_simple_gla.py
(+121 files in other folders)
